# py-ttw-day-1

./: .gitignore  Pipfile  README.rst  pyproject.toml
.github/workflows/: build.yml
docs/: conf.py
kata/: __init__.py  inspections.py
test/: test_array_filter.py  test_array_map.py  test_camel_case_keys.py  test_fizz_buzz.py  test_get_dict_item.py  test_get_item_case_insensitive.py  test_inspections.py  test_kia_ora_te_ao.py  test_snake_case_keys.py
